Endpoint to get a word for the game finished
